feat: 기본 설정 객체 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,10 @@ spring:
     password: 1234
   data:
     redis:
+      host: localhost
       port: 63792
+      username: default
+      password:
   jpa:
     hibernate:
       ddl-auto: create
