--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,11 @@ dependencies {
     // web
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    // mysql
-    runtimeOnly 'com.mysql:mysql-connector-j'
+//    // mysql
+//    runtimeOnly 'com.mysql:mysql-connector-j'
+
+    // postgresql
+    runtimeOnly 'org.postgresql:postgresql'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
@@ -68,9 +71,6 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-
-    // thymeleaf
-    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
     // docker compose support
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
