--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,27 @@
 services:
 
-  mysql:
-    image: 'mysql:latest'
+  #  mysql:
+  #    image: 'mysql:latest'
+  #    environment:
+  #      - 'MYSQL_DATABASE=sample'
+  #      - 'MYSQL_PASSWORD=1234'
+  #      - 'MYSQL_ROOT_PASSWORD=1234'
+  #      - 'MYSQL_USER=sample'
+  #    ports:
+  #      - '33062:3306'
+  #    volumes:
+  #      - mysql_data:/var/lib/mysql
+
+  postgres:
+    image: 'postgres:16.4'
     environment:
-      - 'MYSQL_DATABASE=sample'
-      - 'MYSQL_PASSWORD=1234'
-      - 'MYSQL_ROOT_PASSWORD=1234'
-      - 'MYSQL_USER=sample'
+      - 'POSTGRES_DB=sample'
+      - 'POSTGRES_PASSWORD=1234'
+      - 'POSTGRES_USER=sample'
     ports:
-      - '33062:3306'
+      - '54322:5432'
     volumes:
-      - mysql_data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
 
   redis:
     image: redis:alpine
@@ -20,5 +31,6 @@ services:
       - redis_data:/data
 
 volumes:
-  mysql_data:
+  postgres_data:
+  #  mysql_data:
   redis_data:
