feat: 데이터소스 설정 추가

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,10 +2,11 @@ spring:
   application:
     name: sample
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:54322/sample
-    username: sample
-    password: 1234
+    hikari:
+      driver-class-name: org.postgresql.Driver
+      jdbc-url: jdbc:postgresql://localhost:54322/sample
+      username: sample
+      password: 1234
   data:
     redis:
       host: localhost
