--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,6 +7,7 @@ spring:
       jdbc-url: jdbc:postgresql://localhost:54322/sample
       username: sample
       password: 1234
+      maximum-pool-size: 20
   data:
     redis:
       host: localhost
