--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
 
   postgres:
     image: 'postgres:16.4'
+    command: postgres -c 'max_connections=200' # 기본 설정은 100 이나, 200까지 확장
     environment:
       - 'POSTGRES_DB=sample'
       - 'POSTGRES_PASSWORD=1234'
