--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   #  mysql:
-  #    image: 'mysql:latest'
+  #    image: 'mysql:8.0.35'
   #    environment:
   #      - 'MYSQL_DATABASE=sample'
   #      - 'MYSQL_PASSWORD=1234'
@@ -13,7 +13,7 @@ services:
   #      - mysql_data:/var/lib/mysql
 
   postgres:
-    image: 'postgres:16.4'
+    image: 'postgres:16.4-alpine'
     command: postgres -c 'max_connections=200' # 기본 설정은 100 이나, 200까지 확장
     environment:
       - 'POSTGRES_DB=sample'
@@ -25,7 +25,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   redis:
-    image: redis:alpine
+    image: redis:7.4-alpine
     ports:
       - "63792:6379"
     volumes:
